libs/pavex_macros/tests/constructor/fail/unreacheable_pub.rs
mod private {
    use pavex_macros::singleton;

    pub struct A;

    #[singleton]
    pub fn a() -> A {
        todo!()
    }
}

fn main() {}
